do some code polishing